2019-03-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix atomic unit of velocity
	* Improve findMatchingUnit()

2019-03-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix limits.h inclusion (fixes compilation errors)

2019-03-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix "factorized result is wrong" because of non-simplified value in logical and calculation

2019-03-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix make check (add test.cc and defs2doc.cc to POTFILES.in and add data files to POTFILES.skip)

2019-03-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix rational power interval in some cases
	* Improve gcd() with non-integer coefficients
	* Fix segfault when rounding some intervals

2019-03-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix heuristic gcd
	* Fix limit((6x^3) ∕ (7x − 2x^2 − 5),infinity) and similar

2019-03-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix square of complex interval

2019-03-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix show ending zeroes for rational numbers
	* Avoid multiplication of very long polynomials (fixed)

2019-03-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Ignore locale option (CLI)
	* Handle empty set option value (in most cases by assuming "on") (CLI)

2019-03-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fixes for equations with uncertainty propagation
	* Fix cubic equation in exact mode in some cases
	* Fix a^x=b if it is now known if a and b is zero
	* Layout fixes when formatting "= approx. 'a'"

2019-03-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Two's complement for hexadecimal

2019-02-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use old SI definitions until 2019-05-20
	* Update translations
	* Hide unit and constant suffixes in result

2019-02-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix exact decimals mode
	* Fixes for conversion to base units with nonlinear unit relations